# extendr-vctrs

./: Cargo.toml  README.md
extendr-vctrs-macros/: Cargo.toml
extendr-vctrs-macros/src/: lib.rs
extendr-vctrs-traits/: Cargo.toml
extendr-vctrs-traits/src/: helpers.rs  lib.rs  rvctr.rs  vctr.rs
src/: lib.rs
